# vota-protocol

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Anchor.toml.bak  Cargo.toml  LICENSE  README.md  epoch_97_vote_info2024-02-02-18_54.json  escrowowners.txt  gauge.json  gauge_program.json  gauge_program_data.json  gauges.txt  hotelalb  leftover.json  mainnet-config.txt  messed_up_sellers  msolgauge.txt  notes.txt  package.json  result.txt  vmm
design/: management_design.md
docker/: Dockerfile  startup-script.sh
external-state/account-gen/: Cargo.toml
external-state/account-gen/src/: account.rs  errors.rs  main.rs  toml_update.rs  utils.rs
external-state/account-gen/test-accounts/: epoch-gauge-vote.json  escrow.json  gauge-vote.json  gauge-voter.json  gaugemeister.json  locker.json
external-state/common/: Cargo.toml
external-state/common/src/: lib.rs
external-state/gauge-state/: Cargo.toml
external-state/gauge-state/src/: lib.rs
external-state/idls/: locker.json
external-state/locked-voter-state/: Cargo.toml
external-state/locked-voter-state/src/: lib.rs
external-state/quarry-state/: Cargo.toml
external-state/quarry-state/src/: lib.rs
external-state/types/: gauge.ts
off-chain/vote-market-manager/: Cargo.toml  example.sh  notes.txt
off-chain/vote-market-manager/info/: gauges.json
off-chain/vote-market-manager/src/: errors.rs  main.rs  utils.rs
off-chain/vote-market-manager/src/accounts/: resolve.rs
off-chain/vote-market-manager/src/actions/: create_epoch_gauge.rs  create_token.rs  delegate.rs  escrows.rs  mod.rs  prepare_vote.rs  reset_epoch_gauge_voter.rs  retry_logic.rs  rpc_retry.rs  setup.rs  trigger_epoch.rs  vote.rs  vote_buys.rs  withdraw_votes.rs
off-chain/vote-market-manager/src/actions/management/: calculate_inputs.rs  calculate_weights.rs  calculate_weights_simple.rs  check_votes.rs  data.rs  execute_claim.rs  execute_votes.rs  find_max_vote_buy.rs  mod.rs  oracle.rs  priority_fee.rs  utils.rs
off-chain/vote-market-manager/src/actions/queries/: direct_votes.rs  escrows.rs  get_gauges.rs  mod.rs  vote_buys.rs
off-chain/vote-market-manager/src/actions/vote_market/: buy_votes.rs  claim.rs  clear_votes.rs  mod.rs  refund.rs  set_maximum.rs  setup.rs  update_mints.rs  vote.rs
off-chain/vote-market-manager/src/management/: calculate_inputs.rs  data.rs  mod.rs  oracle.rs
programs/vote-market/: Cargo.toml  results.rs
programs/vote-market/src/: errors.rs  gauge_state.rs  lib.rs  state.rs
programs/vote-market/src/util/: math.rs  mod.rs  vote_math.rs
test-accounts/: epoch-gauge-voter.json  epoch-gauge.json  gauge-vote.json  gauge-voter.json  gauge.json  locker.json
tests/: common.ts  config.json  config2.json  constants.ts  setup-tokens.ts  test-setup.ts  vote-market-rewards.ts  vote-market-voting.ts  vote-market.ts
