[workspace]
members = [ "external-state/account-gen", "external-state/common", "external-state/quarry-state", "off-chain/vote-market-manager",
    "programs/*"
]
resolver = "2"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[patch.crates-io]
vipers = { git = "https://github.com/kAsky53/vipers.git", rev = "a1f91c5" }
