[package]
name = "account-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
anchor-lang = "0.29.0"
solana-sdk = "1.17.15"
gauge-state = { path = "../gauge-state" }
locked-voter-state = { path = "../locked-voter-state" }
base64 = "0.21.6"
dotenv = "0.15.0"
ahash = "=0.8.4"
thiserror = "1.0.56"
toml = "0.8.8"
