[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.7.16"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
