[package]
name = "vote-market-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
solana-client = "1.17.16"
solana-sdk = "1.17.16"
solana-account-decoder = "1.17.16"
solana-program = "1.17.16"
locked-voter-state = { path = "../../external-state/locked-voter-state" }
anchor-lang = "0.29.0"
dotenv = "0.15.0"
