[package]
name = "vote-market-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
solana-client = "1.17.16"
solana-sdk = "1.17.16"
solana-account-decoder = "1.17.16"
solana-program = "1.17.16"
locked-voter-state = { path = "../../external-state/locked-voter-state" }
gauge-state = {path = "../../external-state/gauge-state"}
quarry-state = {path = "../../external-state/quarry-state"}
vote-market = { path = "../../programs/vote-market" }
anchor-lang = "0.29.0"
dotenv = "0.15.0"
anchor-client = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account =  { version = "2.3.0", features = ["no-entrypoint"]}
chrono = "0.4.19"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"]}
common = { path = "../../external-state/common" }
structured-logger = "1.0.3"
log = "0.4.20"
retry = "2.0.0"
