[package]
name = "vote-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
ahash = "=0.8.4"
gauge-state = { path = "../../external-state/gauge-state" }
locked-voter-state = { path = "../../external-state/locked-voter-state" }
sha2 = "0.10.8"
